--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -15,7 +15,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y g++ pkg-config libx11-dev libasound2-dev libudev-dev libxkbcommon-x11-0
+
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
@@ -23,7 +26,7 @@ jobs:
         toolchain: stable
         override: true
         components: rustfmt, clippy
-    
+
     - name: Cache dependencies
       uses: actions/cache@v4
       with:
@@ -34,35 +37,34 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-
-    
+
     - name: Check format
       uses: actions-rs/cargo@v1
       with:
         command: fmt
         args: --all -- --check
-    
+
     - name: Clippy
       uses: actions-rs/cargo@v1
       with:
         command: clippy
         args: -- -D warnings
-    
+
     - name: Build
       uses: actions-rs/cargo@v1
       with:
         command: build
         args: --verbose
-    
+
     - name: Run tests
       uses: actions-rs/cargo@v1
       with:
         command: test
         args: --verbose
-    
+
     - name: Build release
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       uses: actions-rs/cargo@v1
       with:
         command: build
         args: --release --verbose
-    
