--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ egui_extras = "0.31" # Keep in sync with egui
 # Agent and LLM requirements
 aws-config = "1.6"
 aws-sdk-bedrockruntime = "1.87"
+uuid = { version = "1.8", features = ["v4"] }
 aws-smithy-types = "1.1"
 tokio = { version = "1.32", features = ["full"] }
 async-trait = "0.1"
